--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./app/app.js",
   "dependencies": {
     "browserify": "^11.0.1",
+    "electron-debug": "^0.1.1",
     "flux": "^2.0.3",
     "object-assign": "^3.0.0",
     "react": "^0.13.3",
@@ -13,6 +14,7 @@
   },
   "devDependencies": {
     "browserify": "^11.0.1",
+    "electron-prebuilt": "^0.30.2",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
     "uglify-js": "^2.4.24",
